--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ img{
     height: 100px;
     float:left;
     padding-top: -10px;
+    margin-left: 35%;
 }
 .navigation{
     margin-top: 20px;
@@ -97,7 +98,7 @@ img{
 table{
     margin-left: auto;
     margin-right: auto;
-    width: 800px;
+    width: 100%;
     text-align: center;
 }
 tbody tr:nth-child(odd){
