--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -1,1 +1,103 @@
-
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    color: #fff;
+    background-color: #4c91b9;
+    font-size: 24px;
+}
+.header{
+    background: #659DBD ;
+    width: 100%;
+    height: 60px;
+    padding: 40px;
+    text-align: center;
+}
+.title{
+    font-size: 36px;
+    padding: 10px;
+    color:#fff;
+}
+a{
+    text-decoration: none;
+    font-size: 24px;
+    color: white;
+}
+a:hover {
+    text-decoration: underline;
+    color: black;
+}
+img{
+    width: 100%;
+    max-width: 250px;
+}
+.logo{
+    margin-top: -30px;
+    width: 100px;
+    height: 100px;
+    float:left;
+    padding-top: -10px;
+}
+.navigation{
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+    padding: 4px;
+    padding-bottom: 10px;
+    background: #DAAD86;
+    text-align: center;
+    font-size: 24px;
+}
+.navigation a{
+    padding: 40px;
+}
+.footer{
+    padding-left: 20px;
+    margin-top: 30px;
+    height: 60px;
+    background: #659DBD;
+    width: 100%;
+    padding-top: 30px;
+    font-size: large;
+}
+.kontent{
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+    text-align: center;
+    background: #DAAD86;
+}
+.kontent li{
+    margin-left: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.form{
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+    text-align: center;
+    background: #DAAD86;
+}
+.form h2{
+    padding-top: 15px;
+}
+.table{
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+    text-align: center;
+    background: #DAAD86;
+}
+table{
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
+}
+tbody tr:nth-child(odd){
+    background-color: bisque;
+}
+tbody tr:nth-child(even){
+    background-color: #BC986A;
+}
