--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -10,7 +10,6 @@ body{
     width: 100%;
     height: 60px;
     padding: 40px;
-    text-align: center;
 }
 .title{
     font-size: 36px;
@@ -31,22 +30,24 @@ img{
     max-width: 250px;
 }
 .logo{
+    display: flex;
     margin-top: -30px;
     width: 100px;
     height: 100px;
     float:left;
-    padding-top: -10px;
+    margin-left: 28%;
 }
 .navigation{
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
-    padding: 4px;
+    padding-top: 2px;
     padding-bottom: 10px;
     background: #DAAD86;
     text-align: center;
-    font-size: 24px;
+    border-radius: 20px;
+    border: 1px solid black;
 }
 .navigation a{
     padding: 40px;
@@ -61,11 +62,14 @@ img{
     font-size: large;
 }
 .kontent{
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
     text-align: center;
     background: #DAAD86;
+    border-radius: 20px;
+    border: 1px solid black;
 }
 .kontent li{
     margin-left: 4px;
@@ -73,27 +77,32 @@ img{
     padding-bottom: 10px;
 }
 .form{
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
     text-align: center;
     background: #DAAD86;
-}
-.form h2{
-    padding-top: 15px;
+    border-radius: 20px;
+    border: 1px solid black;
+    padding-bottom: 10px;
 }
 .table{
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
     text-align: center;
     background: #DAAD86;
+    border-radius: 20px;
+    border: 1px solid black;
 }
 table{
     margin-left: auto;
     margin-right: auto;
     width: 100%;
     text-align: center;
+    padding-bottom: 20px;
 }
 tbody tr:nth-child(odd){
     background-color: bisque;
@@ -101,3 +110,4 @@ tbody tr:nth-child(odd){
 tbody tr:nth-child(even){
     background-color: #BC986A;
 }
+
