--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -35,7 +35,7 @@ img{
     width: 100px;
     height: 100px;
     float:left;
-    margin-left: 28%;
+    margin-left: 665px;
 }
 .navigation{
     margin-top: 20px;
