--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -35,13 +35,14 @@ img{
     width: 100px;
     height: 100px;
     float:left;
-    margin-left: 485px;
+    margin-left: 665px;
 }
 .navigation{
+    flex-direction: column;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 960px;
+    width: 100%;
     padding-top: 2px;
     padding-bottom: 10px;
     background: #DAAD86;
@@ -62,10 +63,11 @@ img{
     font-size: large;
 }
 .kontent{
+    flex-direction: column;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 960px;
+    width: 100%;
     text-align: center;
     background: #DAAD86;
     border-radius: 20px;
@@ -77,10 +79,11 @@ img{
     padding-bottom: 10px;
 }
 .form{
+    order: 1;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 960px;
+    width: 100%;
     text-align: center;
     background: #DAAD86;
     border-radius: 20px;
@@ -88,10 +91,11 @@ img{
     padding-bottom: 10px;
 }
 .table{
+    order: 2;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 960px;
+    width: 100%;
     text-align: center;
     background: #DAAD86;
     border-radius: 20px;
@@ -109,4 +113,113 @@ tbody tr:nth-child(odd){
 }
 tbody tr:nth-child(even){
     background-color: #BC986A;
+}
+
+@media (min-width: 900px){
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        color: #fff;
+        background-color: #4c91b9;
+        font-size: 24px;
+    }
+    .header{
+        background: #659DBD ;
+        width: 100%;
+        height: 60px;
+        padding: 40px;
+    }
+    .title{
+        font-size: 36px;
+        padding: 10px;
+        color:#fff;
+    }
+    a{
+        text-decoration: none;
+        font-size: 24px;
+        color: white;
+    }
+    a:hover {
+        text-decoration: underline;
+        color: black;
+    }
+    img{
+        width: 100%;
+        max-width: 250px;
+    }
+    .logo{
+        display: flex;
+        margin-top: -30px;
+        width: 100px;
+        height: 100px;
+        float:left;
+        margin-left: 665px;
+    }
+    .navigation{
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 960px;
+        padding-top: 2px;
+        padding-bottom: 10px;
+        background: #DAAD86;
+        text-align: center;
+        border-radius: 20px;
+        border: 1px solid black;
+    }
+    .navigation a{
+        padding: 40px;
+    }
+    .footer{
+        padding-left: 20px;
+        margin-top: 30px;
+        height: 60px;
+        background: #659DBD;
+        width: 100%;
+        padding-top: 30px;
+        font-size: large;
+    }
+    .kontent{
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 960px;
+        text-align: center;
+        background: #DAAD86;
+        border-radius: 20px;
+        border: 1px solid black;
+    }
+    .kontent li{
+        margin-left: 4px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .form{
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 960px;
+        text-align: center;
+        background: #DAAD86;
+        border-radius: 20px;
+        border: 1px solid black;
+        padding-bottom: 10px;
+    }
+    .table{
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 960px;
+        text-align: center;
+        background: #DAAD86;
+        border-radius: 20px;
+        border: 1px solid black;
+    }
+    table{
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        text-align: center;
+        padding-bottom: 20px;
+    }
 }
