--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -5,17 +5,20 @@ body{
     background-color: #4c91b9;
     font-size: 24px;
 }
-header{
-    display: flex;
+header{    
+    height: 120px;
+    text-align: center;
+    letter-spacing: 3px;
     background: #659DBD ;
-    width: 100%;
-    height: 60px;
-    padding: 40px;
 }
 .title{
+    margin: auto;
+    max-width: 960px;
+}
+h1{
+    text-align: center;
     font-size: 36px;
-    padding: 10px;
-    color:#fff;
+    margin-top: 0px;
 }
 a{
     text-decoration: none;
@@ -37,6 +40,9 @@ img{
     text-align: left;
 }
 .navigation{
+    display: flex;
+    text-align: justify;
+    flex-direction: column;
     flex: 1;
     margin-top: 20px;
     max-width: 100%;
@@ -46,13 +52,6 @@ img{
     text-align: center;
     border-radius: 20px;
     border: 1px solid black;
-}
-.ssnav{
-    display: flex;
-    flex-direction: column;
-}
-.flex-item{
-    flex: 1;
 }
 .footer{
     padding-left: 20px;
@@ -116,15 +115,16 @@ tbody tr:nth-child(even){
 }
 @media screen and (min-width: 900px) {
 header{
-    display: flex;
-    flex: 1;
-    height: 60px;
-    padding: 40px;
+    height: 140px;
 }
 .title{
     font-size: 36px;
     padding: 10px;
     color:#fff;
+}
+h1{
+    text-align: center;
+    margin-top: 35px;
 }
 img{
     width: 100%;
@@ -137,21 +137,21 @@ img{
     text-align: left;
 }
 .navigation{
+    flex-direction: row;
     flex: 1;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
-    padding-top: 2px;
+    padding-top: 20px;
     padding-bottom: 10px;
 }
-.ssnav{
-    display: flex;
-    flex-direction: row;
+.navigation a{
+    padding-top: 20px;
+    padding-bottom: 10px;
+    
 }
-.flex-item{
-    flex: 1;
-}
+
 .footer{
     padding-left: 20px;
     margin-top: 30px;
