--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -193,3 +193,20 @@ img{
     flex-direction: column;
 }
 }
+body {
+	background: linear-gradient(-45deg, #ed193b, #a98055, #4c91b9, #681d7a);
+	background-size: 400% 400%;
+	animation: gradient 10s ease infinite;
+}
+ 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
