--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -4,18 +4,23 @@ body{
     color: #fff;
     background-color: #4c91b9;
     font-size: 24px;
+    background: linear-gradient(-45deg, #ed193b, #a98055, #4c91b9, #681d7a);
+	background-size: 400% 400%;
+	animation: gradient 10s ease infinite;
 }
 header{    
     height: 120px;
     text-align: center;
     letter-spacing: 3px;
     background: #659DBD ;
+    max-width: 100%;
 }
 .title{
     margin: auto;
     max-width: 960px;
 }
 h1{
+    padding-top: 30px;
     text-align: center;
     font-size: 28px;
     margin-top: 0px;
@@ -34,6 +39,7 @@ img{
     max-width: 250px;
 }
 .logo{
+    padding-top: 10px;
     width: 100px;
     float: left;
     margin-bottom: 0px;
@@ -54,18 +60,20 @@ img{
     border: 1px solid black;
 }
 .footer{
-    padding-left: 20px;
-    margin-top: 30px;
-    height: 60px;
+    margin-top: 15px;
+    height: 50px;
     background: #659DBD;
     max-width: 100%;
-    padding-top: 30px;
-    font-size: large;
+}
+.footer p{
+    font-size: 24px;
+    padding-top: 15px; 
+    padding-left: 25px;
 }
 .kontent{
     flex: 1;
     margin-top: 20px;
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     background: #DAAD86;
     border-radius: 20px;
@@ -79,7 +87,7 @@ img{
 .form{
     flex: 1;
     margin-top: 20px;
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     background: #DAAD86;
     border-radius: 20px;
@@ -90,7 +98,7 @@ img{
     order: 1;
     flex: 1;
     margin-top: 20px;
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     background: #DAAD86;
     border-radius: 20px;
@@ -118,87 +126,55 @@ header{
     height: 140px;
 }
 .title{
-    font-size: 36px;
     padding: 10px;
-    color:#fff;
 }
 h1{
-    text-align: center;
+    padding-top: 0px;
     margin-top: 35px;
     font-size: 36px;
 }
-img{
-    width: 100%;
-    max-width: 250px;
-}
 .logo{
+    padding-top: 0px;
     width: 120px;
-    float:left;
-    margin-bottom: 0px;
-    text-align: left;
 }
 .navigation{
     flex-direction: row;
-    flex: 1;
-    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 0px;
 }
 .navigation a{
     padding-top: 20px;
-    padding-bottom: 10px;
-    
 }
-
 .footer{
-    padding-left: 20px;
-    margin-top: 30px;
     height: 60px;
-    padding-top: 30px;
-    font-size: large;
+}
+.footer p{
+    padding-top: 20px; 
 }
 .kontent{
-    flex: 1;
-    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 960px;
 }
-.kontent li{
-    margin-left: 4px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
 .form{
-    flex: 1;
-    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 960px;
-    padding-bottom: 10px;
+    width: 960px;
 }
 .table{
     order: 0;
-    flex: 1;
-    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 960px;
+    width: 960px;
 }
 .flex-container{
     display: flex;
     flex-direction: column;
 }
 }
-body {
-	background: linear-gradient(-45deg, #ed193b, #a98055, #4c91b9, #681d7a);
-	background-size: 400% 400%;
-	animation: gradient 10s ease infinite;
-}
- 
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
