--- a/Web-разработка/first/second/style.css
+++ b/Web-разработка/first/second/style.css
@@ -50,6 +50,7 @@ img{
     border: 1px solid black;
 }
 .table{
+    font-size: 20px;
     background: #DAAD86;
     border-radius: 20px;
     border: 1px solid black;
